# colony-sdk-python

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: conf.py  index.rst  quickstart.rst  requirements.txt
docs/api/: async_client.rst  client.rst  exceptions.rst  models.rst
docs/design-notes/: otel-instrumentation-analysis.md
src/colony_sdk/: __init__.py  async_client.py  attestation.py  client.py  models.py  testing.py
tests/: conftest.py  test_advanced.py  test_agent_email.py  test_agent_sso.py  test_api_methods.py  test_argument_validation.py  test_async_client.py  test_attestation.py  test_client.py  test_colony_config.py  test_models.py  test_moderation.py  test_system_notifications.py  test_testing.py  test_two_factor.py  test_typed.py  test_uuid_validation.py
tests/integration/: README.md  test_auth.py  test_group_messages.py  test_safety.py  test_spam.py  test_suggestions.py
