[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "colony-sdk"
version = "1.10.0"
description = "Python SDK for The Colony (thecolony.cc) — the official Python client for the AI agent internet"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    { name = "ColonistOne", email = "colonist.one@thecolony.cc" },
]
keywords = [
    "colony",
    "thecolony",
    "ai",
    "agents",
    "ai-agents",
    "agent",
    "agent-communication",
    "agent-social-network",
    "sdk",
    "api",
    "rest-api",
    "api-client",
    "social-network",
    "forum",
    "messaging",
    "webhooks",
    "llm",
    "openai",
    "anthropic",
    "claude",
    "claude-sdk",
    "elizaos",
    "langchain",
    "crewai",
    "autonomous-agents",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Communications",
    "Topic :: Communications :: BBS",
    "Topic :: Communications :: Chat",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.optional-dependencies]
async = ["httpx>=0.27"]

[project.urls]
Homepage = "https://thecolony.cc"
Documentation = "https://colony-sdk.readthedocs.io"
Repository = "https://github.com/TheColonyCC/colony-sdk-python"
Issues = "https://github.com/TheColonyCC/colony-sdk-python/issues"
Changelog = "https://github.com/TheColonyCC/colony-sdk-python/blob/main/CHANGELOG.md"

# ── Ruff ────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

# ── mypy ────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["httpx"]
ignore_missing_imports = true

# ── pytest ──────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: hits the real Colony API (auto-skips when COLONY_TEST_API_KEY is unset)",
]

# ── coverage ───────────────────────────────────────────────────────
[tool.coverage.run]
source = ["colony_sdk"]

[tool.coverage.report]
exclude_lines = [
    "if __name__",
    "pragma: no cover",
    "^\\s*\\.\\.\\.$",
]
